<resources>
    <string name="app_name">Traveler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pizza">Pizza</string>
    <string name="header">Header</string>
    <string name="restaurants">Restaurants</string>
    <string name="welcomeFragment">Welcome</string>
    <string name="welcomeCountry">Country:</string>
    <string name="welcomeCity">City:</string>
    <string name="picture">Picture of the city</string>
    <string name="srcCity">picture of the City</string>
    <string name="welcome_to">Welcome to  </string>
    <string name="txtCountry">Ukraine</string>
    <string-array name="foodList">
        <item>Restaurants</item>
        <item>Bars</item>
        <item>Cafe</item>
        <item>Food order</item>
    </string-array>
    <string-array name="lifeList">
        <item>Museums</item>
        <item>Cinemas</item>
        <item>Night clubs</item>
        <item>GYM\'s</item>
        <item>Exhibitions</item>
    </string-array>
    <string-array name="servicesList">
        <item>Shopping centers</item>
        <item>Car dealerships</item>
        <item>Hotels</item>
        <item>Petrol station</item>
        <item>Car parks</item>
        <item>Car rental</item>
        <item>Car washes</item>
        <item>Dry cleaning</item>
        <item>ATMs</item>
        <item>Clinics and hospitals</item>
        <item>Pharmacies</item>
        <item>Beauty Salons</item>
        <item>Post office</item>
    </string-array>
    <string-array name="country">
        <item>"Choose Country"</item>
        <item>Ukraine</item>
        <item>Poland</item>
    </string-array>
    <string-array name="ukraine">
        <item>"Choose City"</item>
        <item>Kyiv</item>
        <item>Zaporizhzhya</item>
        <item>Kharkiv</item>
        <item>Donetsk</item>
        <item>Odesa</item>
        <item>Dnipro</item>
        <item>Lviv</item>
        <item>Kryvyi Rih</item>
        <item>Melitopol</item>
        <item>Ivano-Frankivsk</item>
    </string-array>
    <string-array name="poland">
        <item>"Choose City"</item>
        <item>Warsaw</item>
        <item>Krakow</item>
        <item>Lodz</item>
        <item>Gdansk</item>
        <item>Poznan</item>
        <item>Wroclaw</item>
    </string-array>

<!--   Strings for geolocation -->
    <string name="dialog_button_close">Close</string>
    <string name="dialog_title_no_gps">Access to geolocation close</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите
узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно.
Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная
локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
</resources>