<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/welcomeScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcomescreen.WelcomeScreenFragment">


    <TextView
        android:id="@+id/nameWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/welcomeFragment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        app:layout_constraintTop_toBottomOf="@+id/nameWelcome"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/nameImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="@dimen/text_margin"
        android:src="@drawable/rest"
        app:layout_constraintTop_toBottomOf="@id/nameWelcome"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/picture" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        app:layout_constraintTop_toBottomOf="@+id/nameImage"
        app:layout_constraintStart_toStartOf="parent"/>


    <TextView
        android:id="@+id/nameTextCountry"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/welcomeCountry"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/nameTextCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameImage" />

    <Spinner
        android:id="@+id/nameSpinnerCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:background="@color/colorAccent"
        android:minHeight="36dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/nameSpinnerCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameTextCountry"
        app:layout_constraintTop_toBottomOf="@+id/nameImage" />

     <TextView
        android:id="@+id/nameTextCity"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textAlignment="textEnd"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/welcomeCity"
        app:layout_constraintTop_toBottomOf="@id/nameTextCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Spinner
        android:id="@+id/nameSpinnerCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:minHeight="36dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameTextCity"
        app:layout_constraintTop_toBottomOf="@+id/nameSpinnerCountry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mainFragmentFABLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/colorAccent"
        android:src="@android:drawable/ic_dialog_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="@dimen/fab_location_icon_size" />


</androidx.constraintlayout.widget.ConstraintLayout>